Added validation and a ViewModel.

--- a/src/PaceCalculator.Blazor/wwwroot/css/site.css
+++ b/src/PaceCalculator.Blazor/wwwroot/css/site.css
@@ -116,6 +116,9 @@ app {
 .validation-message {
     color: red;
 }
+.timespan {
+    width: 5em;
+}
 
 #blazor-error-ui {
     background: lightyellow;
