--- a/src/PaceCalculator.Blazor/Shared/MainLayout.razor
+++ b/src/PaceCalculator.Blazor/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <a href="https://andypalmer.dev/about/me/" target="_blank" class="ml-md-auto">About the Developer</a>
     </div>
 
     <div class="content px-4">
