--- a/src/PaceCalculator.Blazor/Shared/NavMenu.razor
+++ b/src/PaceCalculator.Blazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">PaceCalculator.Blazor</a>
+    <a class="navbar-brand" href="">Running Calculator</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
